--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "express-session": "^1.17.0",
     "http-status-codes": "^1.4.0",
     "mysql": "^2.18.1",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
@@ -36,5 +38,6 @@
     "@babel/preset-env": "^7.8.6",
     "eslint": "^6.8.0",
     "nodemon": "^2.0.2"
-  }
+  },
+  "proxy": "http://localhost:3000"
 }
